<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context="com.lock.voicescreenlock.MainActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2">
        <RelativeLayout
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/voice_bg"
            android:layout_width="match_parent">

            <!--<TextView-->
                <!--android:id="@+id/textView"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_centerHorizontal="true"-->
                <!--android:layout_centerVertical="true"-->
                <!--android:textColor="@color/white"-->
                <!--android:textSize="24dp"-->
                <!--android:text="@string/app_name" />-->
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/white"
        android:layout_weight="1">

        <LinearLayout

            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="50dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <android.support.v7.widget.CardView
                        android:background="@color/white"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:id="@+id/voice_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/imageView"
                                android:layout_marginTop="4dp"
                                android:layout_centerHorizontal="true"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/voice_password"
                                android:textColor="@color/black"
                                android:textSize="16sp" />

                            <ImageView
                                android:id="@+id/imageView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentTop="true"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="11dp"
                                app:srcCompat="@drawable/mic_main" />
                        </RelativeLayout>



                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:background="@color/white"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:id="@+id/keypad_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/keypad_image"
                                android:layout_marginTop="4dp"
                                android:layout_centerHorizontal="true"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/keypad_password"
                                android:textColor="@color/black"
                                android:textSize="16sp" />

                            <ImageView
                                android:id="@+id/keypad_image"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentTop="true"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="11dp"
                                app:srcCompat="@drawable/keypad_password" />
                        </RelativeLayout>

                    </android.support.v7.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.v7.widget.CardView
                        android:background="@color/white"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:id="@+id/more_apps"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/more_image"
                                android:layout_marginTop="4dp"
                                android:layout_centerHorizontal="true"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/more_apps"
                                android:textColor="@color/black"
                                android:textSize="16sp" />

                            <ImageView
                                android:id="@+id/more_image"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentTop="true"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="11dp"
                                app:srcCompat="@drawable/more_apps_vector" />
                        </RelativeLayout>
                    </android.support.v7.widget.CardView>
                    <android.support.v7.widget.CardView
                        android:background="@color/white"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:id="@+id/rate_us"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/rateus_image"
                                android:layout_marginTop="4dp"
                                android:layout_centerHorizontal="true"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/rate_us"
                                android:textColor="@color/black"
                                android:textSize="16sp" />

                            <ImageView
                                android:id="@+id/rateus_image"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentTop="true"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="11dp"
                                android:src="@drawable/rate_us_" />
                        </RelativeLayout>
                    </android.support.v7.widget.CardView>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                        <!--<Switch-->
                            <!--android:id="@+id/activate_phone_lock"-->
                            <!--android:layout_width="match_parent"-->
                            <!--android:layout_height="match_parent"-->
                            <!--android:layout_gravity="center"-->
                            <!--android:layout_marginStart="10dp"-->
                            <!--android:background="@color/btnBackground"-->
                            <!--android:backgroundTint="@color/colorAccent"-->
                            <!--android:gravity="left"-->
                            <!--android:text="Activate Phone Lock     "-->
                            <!--android:textColor="@color/white"-->
                            <!--android:textSize="18sp" />-->

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/holo_blue_dark">

                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <Switch
                            android:padding="10dp"
                            android:id="@+id/activate_phone_lock"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginStart="2dp"
                            android:gravity="left"
                            android:text="    Activate Phone Lock     "
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <TextView
                            android:padding="3dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textSize="16sp"
                            android:id="@+id/textView3"
                            android:textColor="@color/hintColor"
                            android:layout_marginStart="2dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/your_default_voice_password_is_hello_alternate_password_is_1234" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>
            </LinearLayout>

            <!--<Button-->
                <!--android:id="@+id/voice_password"-->
                <!--android:layout_width="200dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignLeft="@+id/keypad_password"-->
                <!--android:layout_alignParentTop="true"-->
                <!--android:layout_alignStart="@+id/keypad_password"-->
                <!--android:layout_marginTop="30dp"-->
                <!--android:backgroundTint="@color/btnBackground"-->
                <!--android:text="@string/voice_password"-->
                <!--android:textColor="@color/white" />-->

            <!--<Button-->
                <!--android:id="@+id/keypad_password"-->
                <!--android:layout_width="200dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignLeft="@+id/app_settings"-->
                <!--android:layout_alignStart="@+id/app_settings"-->
                <!--android:layout_alignTop="@+id/voice_password"-->
                <!--android:layout_marginTop="67dp"-->
                <!--android:backgroundTint="@color/btnBackground"-->
                <!--android:text="@string/keypad_password"-->
                <!--android:textColor="@color/white" />-->

            <!--<Button-->
                <!--android:id="@+id/app_settings"-->
                <!--android:layout_width="200dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_centerHorizontal="true"-->
                <!--android:layout_centerVertical="true"-->
                <!--android:backgroundTint="@color/btnBackground"-->
                <!--android:text="@string/app_settings"-->
                <!--android:textColor="@android:color/white" />-->

            <!--<Switch-->
                <!--android:id="@+id/activate_phone_lock"-->
                <!--android:layout_width="300dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentBottom="true"-->
                <!--android:layout_centerHorizontal="true"-->
                <!--android:layout_gravity="center"-->
                <!--android:layout_marginBottom="14dp"-->
                <!--android:background="@color/btnBackground"-->
                <!--android:gravity="center"-->
                <!--android:text="Activate Phone Lock     "-->
                <!--android:textColor="@color/white"-->
                <!--android:textSize="18sp" />-->
        </LinearLayout>
    </android.support.v7.widget.CardView>



</LinearLayout>
